# dirwatch

./: .gitignore  CMakeLists.txt  README.md  app.conf  main.c  rsync.py  timer.c  timer.h
cmake/modules/: FindPOPT.cmake
